--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-query": "^5.12.2",
-    "@tanstack/react-query-devtools": "^5.13.3",
-    "@tanstack/react-router": "^0.0.1-beta.225",
-    "@tanstack/router-devtools": "^0.0.1-beta.225",
+    "@tanstack/react-query": "^5.13.4",
+    "@tanstack/react-query-devtools": "^5.13.4",
+    "@tanstack/react-router": "^0.0.1-beta.247",
+    "@tanstack/router-devtools": "^0.0.1-beta.247",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -36,14 +36,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.48.2",
+    "react-error-boundary": "^4.0.11",
+    "react-hook-form": "^7.49.0",
     "react-intersection-observer": "^9.5.3",
     "tailwind-merge": "^2.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.3",
-    "@types/react": "^18.2.42",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
@@ -55,8 +56,8 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.6",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.7",
     "vite-plugin-top-level-await": "^1.3.1"
   }
 }
