--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^5.13.4",
     "@tanstack/react-query-devtools": "^5.13.5",
     "@tanstack/react-router": "^0.0.1-beta.265",
+    "@tanstack/router-devtools": "^0.0.1-beta.265",
     "@vercel/speed-insights": "^1.0.1",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
