Update app name and short name in manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Devhub",
-  "name": "Devhub - A place for developers",
+  "short_name": "Instafram",
+  "name": "Instafram - Social Media",
   "icons": [
     {
       "src": "assets/icon/favicon.ico",
