--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-query": "^5.14.2",
-    "@tanstack/react-query-devtools": "^5.14.5",
-    "@tanstack/react-router": "^0.0.1-beta.285",
-    "@tanstack/router-devtools": "^0.0.1-beta.285",
+    "@tanstack/react-query": "^5.14.6",
+    "@tanstack/react-query-devtools": "^5.14.6",
+    "@tanstack/react-router": "^1.0.0",
+    "@tanstack/router-devtools": "^1.0.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.2",
     "axios": "^1.6.2",
