--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,11 @@
 {
   "short_name": "Instafram",
   "name": "Instafram - Social Media",
+  "description": "A social media platform for sharing photos and connecting with friends.",
+  "lang": "en-US",
+  "dir": "ltr",
+  "scope": "/",
+  "orientation": "any",
   "icons": [
     {
       "src": "assets/icon/favicon.ico",
@@ -21,5 +26,16 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "related_applications": [
+    {
+      "platform": "web"
+    },
+    {
+      "platform": "play",
+      "url": "https://play.google.com/store/apps/details?id=com.example.app1",
+      "id": "com.example.app1"
+    }
+  ],
+  "prefer_related_applications": false
 }
