--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "cmdk": "^0.2.0",
     "crypto-hash": "^3.0.0",
     "date-fns": "^3.0.6",
-    "lucide-react": "^0.302.0",
+    "lucide-react": "^0.303.0",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,13 +40,14 @@
     "react-error-boundary": "^4.0.12",
     "react-hook-form": "^7.49.2",
     "react-intersection-observer": "^9.5.3",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
     "@types/qs": "^6.9.11",
-    "@types/react": "^18.2.45",
+    "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
