--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-query": "^5.15.0",
-    "@tanstack/react-query-devtools": "^5.15.0",
-    "@tanstack/react-router": "^1.0.5",
-    "@tanstack/router-devtools": "^1.0.5",
+    "@tanstack/react-query": "^5.15.3",
+    "@tanstack/react-query-devtools": "^5.15.3",
+    "@tanstack/react-router": "^1.0.6",
+    "@tanstack/router-devtools": "^1.0.6",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.2",
     "axios": "^1.6.3",
@@ -53,10 +53,13 @@
     "@typescript-eslint/parser": "^6.16.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.16",
+    "cssnano": "^6.0.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.10",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
