--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,7 @@
   "name": "Instafram - Social Media",
   "description": "A social media platform for sharing photos and connecting with friends.",
   "lang": "en-US",
-  "dir": "ltr",
   "scope": "/",
-  "orientation": "any",
   "icons": [
     {
       "src": "assets/icon/favicon.ico",
@@ -14,12 +12,12 @@
     },
     {
       "src": "assets/images/logo.svg",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "sizes": "192x192"
     },
     {
       "src": "assets/images/logo.svg",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "sizes": "512x512"
     }
   ],
@@ -27,15 +25,5 @@
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff",
-  "related_applications": [
-    {
-      "platform": "web"
-    },
-    {
-      "platform": "play",
-      "url": "https://play.google.com/store/apps/details?id=com.example.app1",
-      "id": "com.example.app1"
-    }
-  ],
   "prefer_related_applications": false
 }
